--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.359 2014-05-26 07:29:56 tlipkis Exp $
+ $Id: build.xml,v 1.360 2014-05-28 00:15:39 tlipkis Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -1126,7 +1126,7 @@ The target you have selected requires compiling under JDK 1.7.
              value="now"/>
       <entry key="build.timestamp"
 	     type="date"
-	     pattern="dd-MMM-yy' 'HH:mm:ss"
+	     pattern="dd-MMM-yy' 'HH:mm:ss' 'zzz"
 	     value="now"/>
       <entry key="build.user.name" value="${user.name}"/>
       <entry key="build.host" value="${hostname}"/>
