--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.361 2014-06-10 00:50:20 thib_gc Exp $
+ $Id: build.xml,v 1.362 2014-06-18 01:02:19 tlipkis Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -949,6 +949,7 @@ The target you have selected requires compiling under JDK 1.7.
     <copy todir="${classes}" >
        <fileset dir="${src}" >
           <include name="**/*.xml"/>   <!-- mapping files in various dirs -->
+          <include name="**/*.dtd"/>
           <include name="**/*.props"/>
           <include name="**/*.keystore"/>
           <include name="commons-logging.properties"/>
