--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.368 2014-08-22 19:09:45 tlipkis Exp $
+ $Id: build.xml,v 1.369 2014-09-02 22:04:06 thib_gc Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -240,7 +240,7 @@ Args:
   <property name="commons.configuration.jar"
                   value="${lib}/commons-configuration-1.10.jar"/>
   <property name="commons.logging.jar"
-  				  value="${lib}/commons-logging-1.1.3.jar"/>
+  				  value="${lib}/commons-logging-1.2.jar"/>
   <property name="commons.codec.jar"
   				  value="${lib}/commons-codec-1.9.jar"/>
   <property name="commons.compress.jar"
