Update to PDFBox 1.8.7, ICU4J 54.1.
git-svn-id: svn://svn.code.sf.net/p/lockss/svn/lockss-daemon/trunk@37436 4f837ed2-42f5-46e7-a7a5-fa17313484d4

--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.373 2014-10-01 21:45:01 clairegriffin Exp $
+ $Id: build.xml,v 1.374 2014-10-07 00:41:03 thib_gc Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -303,7 +303,7 @@ Args:
   <property name="ant-contrib.jar"      value="${lib}/ant-contrib-0.6.jar"/>
 
   <!-- PDFBox -->
-  <property name="pdfbox.version" value="1.8.6" />
+  <property name="pdfbox.version" value="1.8.7" />
   <property name="pdfbox.jar" value="${lib}/pdfbox-${pdfbox.version}.jar" />
   <!-- Next 9 JARs needed by PDFBox: -->
   <property name="fontbox.jar" value="${lib}/fontbox-${pdfbox.version}.jar" />
@@ -312,7 +312,7 @@ Args:
   <property name="bouncycastle.version" value="jdk15on-151" />
   <property name="bouncycastle-provider.jar" value="${lib}/bcprov-${bouncycastle.version}.jar" />
   <property name="bouncycastle-mail.jar" value="${lib}/bcmail-${bouncycastle.version}.jar" />
-  <property name="icu4j.version" value="53_1" />
+  <property name="icu4j.version" value="54_1" />
   <property name="icu4j.jar" value="${lib}/icu4j-${icu4j.version}.jar" />
   <property name="icu4j-charset.jar" value="${lib}/icu4j-charset-${icu4j.version}.jar" />
   <property name="icu4j-localespi.jar" value="${lib}/icu4j-localespi-${icu4j.version}.jar" />
