--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.375 2014-10-13 18:19:28 thib_gc Exp $
+ $Id: build.xml,v 1.376 2014-10-13 22:21:29 fergaloy-sf Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -399,6 +399,11 @@ Args:
   <property name="xmlschema-core.jar" value="${lib}/xmlschema-core-2.0.3.jar" />
   <property name="JoSQL.jar" value="${lib}/JoSQL-2.2.jar" />
   <property name="gentlyWEB-utils.jar" value="${lib}/gentlyWEB-utils-1.1.jar" />
+
+  <property name="default.db.parent.dir" value="${temp.build}" />
+  <property name="default.db.dir" value="${default.db.parent.dir}/db" />
+  <property name="default.db.archive"
+            value="${test.classes}/org/lockss/db/db.zip" />
 
   <!--  Compiler options -->
   <property name="javac.debug"             value="on" />
@@ -1452,7 +1457,7 @@ Must specify output dir with -Doutdir=dir
 
   <!-- ==================================================================== -->
 
-  <target name="jar-tests" depends="compile-tests"
+  <target name="jar-tests" depends="compile-tests,archive-default-db"
    description="Jar the LOCKSS test classes" >
     <jar jarfile="${lockss.test.jar}" basedir="${test.classes}" >
        <include name="**/" />
@@ -3406,16 +3411,49 @@ Test results in ${test.results}
     </antcall>
   </target>
 
-  <target name="schema-doc-createdb" depends="jar-tools"
-          description="Creates a database to generate database schema documentation.">
-    <tempfile property="schema.doc.db.dir" deleteonexit="true"
-              destdir="${tmpdir}" prefix="schema_doc"/>
-    <mkdir dir="${schema.doc.db.dir}" />
-    <java classname="org.lockss.db.SchemaDocDbCreator" fork="true">
-      <classpath refid="tools.run.classpath" />
-      <arg line="-d ${schema.doc.db.dir}" />
-      <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}"/>
+  <target name="build-default-db" depends="check-default-db"
+          unless="db.is.up.to.date"
+          description="Creates a database to be copied by tests.">
+    <delete dir="${default.db.dir}" quiet="true" />
+    <java classname="org.lockss.db.EmptyDbCreator" fork="true">
+      <classpath refid="build.default.db.run.classpath" />
+      <arg line="-d ${default.db.parent.dir}" />
+      <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}" />
     </java>
+  </target>
+
+  <target name="check-default-db" depends="compile-tests"
+          description="Checks whether the default database is up-to-date.">
+  	<mkdir dir="${default.db.dir}" />
+    <uptodate property="db.requires.rebuild"
+              targetfile="${classes}/org/lockss/db/DbManager.class">
+      <srcfiles dir="${default.db.dir}" />
+    </uptodate>
+    <if>
+      <isset property="db.requires.rebuild" />
+      <else>
+        <property name="db.is.up.to.date" value="true" />
+      </else>
+    </if>
+  </target>
+
+  <path id="build.default.db.run.classpath">
+    <path refid="test.compile.classpath" />
+    <pathelement path="${test.classes}" />
+  </path>
+
+  <target name="archive-default-db" depends="check-archive-default-db"
+          unless="archive.is.up.to.date"
+          description="Creates an archive with the default database.">
+    <zip destfile="${default.db.archive}" basedir="${default.db.dir}" />
+  </target>
+
+  <target name="check-archive-default-db" depends="build-default-db"
+          description="Checks whether the default database archive is up-to-date.">
+    <uptodate property="archive.is.up.to.date"
+              targetfile="${default.db.archive}">
+      <srcfiles dir="${default.db.dir}" />
+    </uptodate>
   </target>
 
   <target name="clean-schema-doc"
@@ -3430,12 +3468,13 @@ Test results in ${test.results}
     </exec>
   </target>
 
-  <target name="schema-doc" depends="check.contrib,clean-schema-doc,check-for-dot,schema-doc-createdb"
+  <target name="schema-doc"
+          depends="check.contrib,clean-schema-doc,check-for-dot,build-default-db"
           description="Creates database schema documentation diagrams.">
     <if>
       <isset property="dot.is.available" />
    	  <then>
-        <java jar="${schemaSpy.jar}" fork="true" dir="${schema.doc.db.dir}/db">
+        <java jar="${schemaSpy.jar}" fork="true" dir="${default.db.dir}">
           <arg line="-t derby -db DbManager -dp ${derbynet.jar} -hq -noads -norows -u LOCKSS -o ${schema.doc.dir}" />
           <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}"/>
         </java>
@@ -3444,7 +3483,5 @@ Test results in ${test.results}
         <echo message="Schema documentation not generated because the dot program is not available; continuing..."/>
       </else>
     </if>
-    <delete dir="${schema.doc.db.dir}" quiet="true"/>
   </target>
-
 </project>
