--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.376 2014-10-13 22:21:29 fergaloy-sf Exp $
+ $Id: build.xml,v 1.377 2014-10-14 19:47:11 fergaloy-sf Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -400,9 +400,9 @@ Args:
   <property name="JoSQL.jar" value="${lib}/JoSQL-2.2.jar" />
   <property name="gentlyWEB-utils.jar" value="${lib}/gentlyWEB-utils-1.1.jar" />
 
-  <property name="default.db.parent.dir" value="${temp.build}" />
-  <property name="default.db.dir" value="${default.db.parent.dir}/db" />
-  <property name="default.db.archive"
+  <property name="empty.db.parent.dir" value="${tmpdir}" />
+  <property name="empty.db.dir" value="${empty.db.parent.dir}/db" />
+  <property name="empty.db.archive"
             value="${test.classes}/org/lockss/db/db.zip" />
 
   <!--  Compiler options -->
@@ -898,6 +898,7 @@ The target you have selected requires compiling under JDK 1.7.
       <!-- ant-generated files that can get left around if build is aborted -->
       <fileset dir="${basedir}" includes="files?* junit?*.properties"/>
     </delete>
+    <delete dir="${empty.db.dir}" quiet="true" />
   </target>
 
   <target name="clean-tempbuild"
@@ -1457,7 +1458,7 @@ Must specify output dir with -Doutdir=dir
 
   <!-- ==================================================================== -->
 
-  <target name="jar-tests" depends="compile-tests,archive-default-db"
+  <target name="jar-tests" depends="compile-tests,archive-empty-db"
    description="Jar the LOCKSS test classes" >
     <jar jarfile="${lockss.test.jar}" basedir="${test.classes}" >
        <include name="**/" />
@@ -3411,23 +3412,23 @@ Test results in ${test.results}
     </antcall>
   </target>
 
-  <target name="build-default-db" depends="check-default-db"
+  <target name="build-empty-db" depends="check-empty-db"
           unless="db.is.up.to.date"
           description="Creates a database to be copied by tests.">
-    <delete dir="${default.db.dir}" quiet="true" />
+    <delete dir="${empty.db.dir}" quiet="true" />
     <java classname="org.lockss.db.EmptyDbCreator" fork="true">
-      <classpath refid="build.default.db.run.classpath" />
-      <arg line="-d ${default.db.parent.dir}" />
+      <classpath refid="build.empty.db.run.classpath" />
+      <arg line="-d ${empty.db.parent.dir}" />
       <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}" />
     </java>
   </target>
 
-  <target name="check-default-db" depends="compile-tests"
-          description="Checks whether the default database is up-to-date.">
-  	<mkdir dir="${default.db.dir}" />
+  <target name="check-empty-db" depends="compile-tests"
+          description="Checks whether the empty database is up-to-date.">
+  	<mkdir dir="${empty.db.dir}" />
     <uptodate property="db.requires.rebuild"
               targetfile="${classes}/org/lockss/db/DbManager.class">
-      <srcfiles dir="${default.db.dir}" />
+      <srcfiles dir="${empty.db.dir}" />
     </uptodate>
     <if>
       <isset property="db.requires.rebuild" />
@@ -3437,24 +3438,34 @@ Test results in ${test.results}
     </if>
   </target>
 
-  <path id="build.default.db.run.classpath">
+  <path id="build.empty.db.run.classpath">
     <path refid="test.compile.classpath" />
     <pathelement path="${test.classes}" />
   </path>
 
-  <target name="archive-default-db" depends="check-archive-default-db"
-          unless="archive.is.up.to.date"
-          description="Creates an archive with the default database.">
-    <zip destfile="${default.db.archive}" basedir="${default.db.dir}" />
+  <target name="archive-empty-db" depends="compile-tests"
+          description="Creates an archive with the empty database.">
+    <uptodate property="archive.db.is.up.to.date"
+              srcfile="${classes}/org/lockss/db/DbManager.class"
+              targetfile="${empty.db.archive}" />
+    <if>
+      <isset property="archive.db.is.up.to.date" />
+      <else>
+        <delete dir="${empty.db.dir}" quiet="true" />
+        <java classname="org.lockss.db.EmptyDbCreator" fork="true">
+          <classpath refid="archive.empty.db.run.classpath" />
+          <arg line="-d ${empty.db.parent.dir}" />
+          <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}" />
+        </java>
+        <zip destfile="${empty.db.archive}" basedir="${empty.db.dir}" />
+      </else>
+    </if>
   </target>
 
-  <target name="check-archive-default-db" depends="build-default-db"
-          description="Checks whether the default database archive is up-to-date.">
-    <uptodate property="archive.is.up.to.date"
-              targetfile="${default.db.archive}">
-      <srcfiles dir="${default.db.dir}" />
-    </uptodate>
-  </target>
+  <path id="archive.empty.db.run.classpath">
+    <path refid="test.compile.classpath" />
+    <pathelement path="${test.classes}" />
+  </path>
 
   <target name="clean-schema-doc"
           description="Deletes the database schema documentation." >
@@ -3469,12 +3480,12 @@ Test results in ${test.results}
   </target>
 
   <target name="schema-doc"
-          depends="check.contrib,clean-schema-doc,check-for-dot,build-default-db"
+          depends="check.contrib,clean-schema-doc,check-for-dot,build-empty-db"
           description="Creates database schema documentation diagrams.">
     <if>
       <isset property="dot.is.available" />
    	  <then>
-        <java jar="${schemaSpy.jar}" fork="true" dir="${default.db.dir}">
+        <java jar="${schemaSpy.jar}" fork="true" dir="${empty.db.dir}">
           <arg line="-t derby -db DbManager -dp ${derbynet.jar} -hq -noads -norows -u LOCKSS -o ${schema.doc.dir}" />
           <sysproperty key="org.lockss.defaultLogLevel" value="${loglevel}"/>
         </java>
