--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <!--
 
 ========================================================================
- $Id: build.xml,v 1.380 2014-10-22 19:39:34 thib_gc Exp $
+ $Id: build.xml,v 1.381 2014-10-23 18:24:25 tlipkis Exp $
  Ant build file for LOCKSS daemon
 ========================================================================
 
@@ -1360,7 +1360,7 @@ The target you have selected requires compiling under JDK 1.7.
   </target>
 
   <!-- ==================================================================== -->
-  <target name="tdb-pln"
+  <target name="tdb-pln" depends="jar-lockss"
 	  description="Process .tdb files for -Dplnname=PLN into .xml">
     <fail unless="plnname">
 Must specify PLN name with -Dplnname=name
